--- a/description
+++ b/description
@@ -1,13 +1,14 @@
 1. Read the whole track form .trk file(original space not voxel cordinate)
 2. Calculating the length of all streamline (according the dipy function)
-3.  Filter the streamline(with the length less than 10)
-4.  then we have a modified tracktography with ~200k streamlines
-5. Now for the check of crossing
+3. Filter the streamline(with the length less than 10)
+4. then we have a modified tracktography with ~200k streamlines
+5. Arrange the whole tractography accodring to the length
+6. Now for the check of crossing
      
     Next step: (checking the crossing)
 1. take an empty dictionary
-2. take one streamline form 200k streamlines
-3. Find the list of voxel, it goes through
+2. take the longest streamline form 200k streamlines
+3. Find the list of voxel, the longest streamline goes through
              check if the voxel of that streamline is already in the dictionary then 
                    break (not take that) 
              otherwise
